navbar flickering issue fixed

--- a/angular/angular-app/src/app/components/drag/drag.component.less
+++ b/angular/angular-app/src/app/components/drag/drag.component.less
@@ -12,8 +12,40 @@
 }
 
 .btn-custom {
-    margin-top: 36px;
+    // margin-top: 36px;
     align-items: flex-end !important;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 40%;
+    left: 50%;
+    z-index: 10000000;
+}
+
+.lds-dual-ring:after {
+    content: "";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #072155;
+    border-color: #072155 transparent #072155 transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .row1 {
