--- a/angular/angular-app/src/app/components/intro/intro.component.less
+++ b/angular/angular-app/src/app/components/intro/intro.component.less
@@ -12,7 +12,7 @@
     padding-right: 10%;
 }
 
-.col-10 {
+.col-11 {
     height: 100% !important;
     width: 100% !important;
     object-fit: cover !important;
