--- a/angular/angular-app/src/app/utilities/navbar/navbar.component.less
+++ b/angular/angular-app/src/app/utilities/navbar/navbar.component.less
@@ -47,11 +47,11 @@ img {
     color: #fff;
 }
 
-.btn-group {
-    // margin-bottom: 4%;
-    // margin-left: 60%;
-    justify-content: end;
-}
+// .btn-group {
+// margin-bottom: 4%;
+// margin-left: 60%;
+// justify-content: end;
+// }
 
 .container {
     width: 100% !important;
